--- a/target-config.json
+++ b/target-config.json
@@ -1,6 +1,6 @@
 {
-    "client_id": 1,
-    "token": "string",
+    "client_id": 1, 
+    "token": "<token>",
     "small_batch_url": "https://api.eu-central-1.stitchdata.com/v2/import/batch",
     "big_batch_url": "https://api.eu-central-1.stitchdata.com/v2/import/batch",
     "batch_size_preferences": {},
